# messenger-chat-analysis

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
mca/analytics/: __init__.py  activity.py  links.py  media.py  message_length.py  participant_stats.py
mca/config/: constants.py
mca/core/: interval.py  normalizer.py  parse_results_csv.py  parsed_messages.py
mca/ml/: __init__.py  features.py  knn.py  label_days.py
mca/nlp/: __init__.py  digest.py  summarize.py  summarize_ollama.py
mca/viz/: __init__.py  emojis.py  word_cloud.py
misc/datasets/: knn_training_data.csv
modules/: active_days.py  average_message_length.py  chat_digest.py  constants.py  correct_interval.py  emojis.py  helper_funs.py  links.py  photos_videos.py  ratio.py  summarize_text.py  word_cloud.py
tests/: conftest.py  test_active_days.py  test_average_message_length.py  test_chat_digest.py  test_correct_interval.py  test_emojis.py  test_helper_funs.py  test_links.py  test_main.py  test_parsed_messages.py  test_participant_stats.py  test_photos_videos.py  test_word_cloud.py
tools/: check  format
