[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mca"]

[project]
name = "messenger-chat-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "emoji==2.14.1",
    "fonttools==4.55.3",
    "joblib==1.5.0",
    "kiwisolver==1.4.7",
    "matplotlib==3.10.0",
    "nltk==3.9.1",
    "numpy==2.2.0",
    "packaging==24.2",
    "pandas>=2.0.0",
    "pillow==11.0.0",
    "scikit-learn>=1.4.0",
    "pyparsing==3.2.0",
    "pystempel>=2.0.0",
    "python-dateutil==2.9.0.post0",
    "regex==2024.11.6",
    # Fix #18: setuptools is a build tool, not a runtime dependency — removed
    "six==1.17.0",
    "sumy>=0.11.0",
    "tabulate==0.9.0",
    "tqdm==4.67.1",
    "wordcloud==1.9.4",
    "ollama>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff.lint]
unfixable = ["F401"]
